# git-plane-mcp

./: README.md  pyproject.toml
mcp_git_plane/: __init__.py  git_ops.py  plane_ops.py  schema.py  server.py
